--- a/css/styles.css
+++ b/css/styles.css
@@ -128,8 +128,23 @@ p {
 .hero {
   padding-top: 200px;
   padding-bottom: 200px;
-  background-color: var(--dark-gray);
   text-align: center;
+}
+.overlay {
+  max-width: 1600px;
+  height: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  background-image: linear-gradient(
+      to right,
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url("../images/img8.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-color: var(--dark-gray);
 }
 .hero-container {
   max-width: 696px;
@@ -151,15 +166,16 @@ p {
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
-  /* display: flex; */
   align-items: center;
   text-align: center;
   letter-spacing: 0.06em;
   color: var(--white);
   background-color: var(--accent);
   border-radius: 4px;
+  border: 0px;
   padding: 10px 32px;
   min-width: 200px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 /* блок особенности */
